# oracle

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md
.github/workflows/: cli-ci.yml  cli-tests.yml  e2e-ci.yml  frontend-ci.yml  server-ci.yml  server-tests.yml
backend/: CLAUDE.md  README.md  pyproject.toml
backend/migrations/: 0001_create_documents.sql  0002_create_chunks.sql
backend/src/oracle/cli/: main.py
backend/src/oracle/common/: chunks.py  db.py  documents.py  embeddings.py  ingest.py  search.py
backend/src/oracle/server/: app.py  main.py
backend/tests/: conftest.py  test_chunks.py  test_cli_main.py  test_db.py  test_documents.py  test_embeddings.py  test_ingest.py  test_search.py  test_server_app.py
backend/tests/data/: CPCCBS6101- Learner Guide_V2_2026_APRIL.docx
frontend/: .env.example  .gitignore  CLAUDE.md  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/e2e/: upload-polling.spec.ts
frontend/e2e/fixtures/: notes.docx
frontend/src/: App.vue  api.ts  clipboard.ts  colorScheme.ts  llmPrompt.ts  main.ts  style.css  theme.ts  vite-env.d.ts
frontend/src/components/: DocumentTable.vue  DocumentUpload.vue  SearchPanel.vue
frontend/tests/: api.test.ts  app.test.ts  clipboard.test.ts  document-table.test.ts  llm-prompt.test.ts  search-panel.test.ts
