[project]
name = "oracle"
version = "0.1.0"
description = "Use LLM's to ask questions of provided documents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "pymupdf>=1.28.0",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.50.2",
]

[project.scripts]
oracle-cli = "oracle.cli.main:main"
oracle-server = "oracle.server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
