[project]
name = "oracle"
version = "0.1.0"
description = "Use LLM's to ask questions of provided documents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "fastembed>=0.8.0",
    "pydantic>=2.13.0",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.50.2",
]

[project.scripts]
oracle-cli = "oracle.cli.main:main"
oracle-server = "oracle.server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = [
    "E", "F", "I",
    "ANN"
]

[tool.ty.rules]
all = "error"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "ty>=0.0.59",
]
